--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "postcss": "8.5.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "tailwindcss": "4.0.1",
     "typescript": "5.7.3"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.17"
   }
 }
